--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/solana-web3.js/1.31.0/solana-web3.min.js"></script>
+<script src="https://unpkg.com/@solana/wallet-adapter-wallets@0.7.6/lib/index.umd.min.js"></script>
 <script>
     document.addEventListener("DOMContentLoaded", async () => {
         const { clusterApiUrl, Connection } = solanaWeb3;
